--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "js-cookie": "^3.0.5",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "thunk": "^0.0.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
