--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
