--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "homepage": ".",
   "dependencies": {
     "axios": "^1.6.1",
     "js-cookie": "^3.0.5",
